# D2MOO

./: .editorconfig  .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  LICENSE  README.md
D2.Detours.patches/: CMakeLists.txt  Template.patch.cpp
D2.Detours.patches/1.10f/: D2Client.patch.cpp  D2Common.patch.cpp  D2Debugger.patch.cpp  D2Debugger.patch.rc  D2Game.patch.cpp  Fog.patch.cpp
D2.Detours.patches/1.14d/: D2Debugger.patch.cpp  D2Debugger.patch.rc
source/: .clang-tidy  CMakeLists.txt
source/D2CMP/: CMakeLists.txt
source/D2CMP/definitions/: D2CMP.1.07.debug.def  D2CMP.1.10f.def
source/D2CMP/include/: Count.h  D2CMP.h  GfxHash.h
source/D2CMP/src/: CelCmp.cpp  CelDataHash.cpp  Codec.cpp  Count.cpp  D2CMP.cpp  DllMain.cpp  DrwCntxt.cpp  FastCmp.cpp  FindTiles.cpp  GfxHash.cpp  LRUCache.cpp  PalShift.cpp  Palette.cpp  Raw.cpp  SpriteCache.cpp  SubTile.cpp  TileCache.cpp  TileLib.cpp  TileProjects.cpp  Tilecmp.cpp
source/D2Client/: CMakeLists.txt
source/D2Client/definitions/: D2Client.1.10f.def
source/D2Client/include/: D2Client.h
source/D2Client/include/CGAME/: Game.h  Msg.h  Record.h  View.h  scroll.h
source/D2Client/include/Core/: ARCHIVE.h  Lng.h  MemoryPartitions.h  WINMAIN.h  WNDPROC.h
source/D2Client/include/Draw/: Draw.h
source/D2Client/include/Engine/: Cursor.h  Gfx.h
source/D2Client/include/Game/: Game.h  Msg.h  Record.h  SCmd.h  Select.h
source/D2Client/include/UI/: CmdTbl.h  (+5 more)
source/D2Client/src/: DllMain.cpp
source/D2Common/: CMakeLists.txt
source/D2Common/definitions/: D2Common.1.10f.def
source/D2Common/include/: CommonDefinitions.h  D2BitBuffer.h  D2Chat.h  D2Collision.h  D2Combat.h  D2Common.h  D2Composit.h  D2DataTbls.h  D2Dungeon.h  D2Environment.h  D2Inventory.h  D2ItemMods.h  D2Items.h  D2Log.h  D2Math.h  D2Monsters.h  D2QuestRecord.h  D2Roster.h  D2Seed.h  D2Skills.h  D2StatList.h  D2States.h  D2Text.h  D2Timer.h  D2Waypoints.h  UselessOrdinals.h
source/D2Common/src/: D2BitBuffer.cpp  D2Chat.cpp  D2Collision.cpp  D2Composit.cpp  D2Dungeon.cpp  D2Environment.cpp  D2Inventory.cpp  D2Log.cpp  D2Math.cpp  D2QuestRecord.cpp  D2Seed.cpp  D2Skills.cpp  D2StatList.cpp  D2States.cpp  D2Text.cpp  D2Waypoints.cpp  DllMain.cpp  UselessOrdinals.cpp
source/D2Common/statictests/: D2Drlg_staticchecks.cpp  D2PacketDef_staticchecks.cpp  D2StatList_staticchecks.cpp  Path_staticchecks.cpp  Units_staticchecks.cpp
source/D2Common/tests/: CMakeLists.txt  D2CommonTests.cpp  D2CommonTests.manifest
source/D2CommonDefinitions/: CMakeLists.txt
source/D2CommonDefinitions/include/: BnClient.h  D2BasicTypes.h  D2BuildInformation.h  D2CommonDefinitions.h  D2Config.h  D2Constants.h  D2DataTables.h  D2Dll.h  D2Math.h  D2PacketDef.h  D2QuestDataEx.h  D2Structs.OtherDLLs.h  D2Structs.h  ProfilingPatchHelpers.h
source/D2Debugger/: CMakeLists.txt
source/D2Debugger/include/: D2Debugger.h  D2Debugger.patch.common.h
source/D2Debugger/src/: D2Debugger.Game.cpp  D2Debugger.cpp  D2Debugger.imgui.d3d9.cpp  D2Debugger.patch.common.cpp  IconsFontAwesome6.h  fa-solid-900.cpp
source/D2Game/: CMakeLists.txt
source/D2Game/definitions/: D2Game.1.10f.def
source/D2Game/include/: D2Game.h  D2Packet.h  D2PacketDef.h
source/D2Game/src/: DllMain.cpp
source/D2Game/statictests/: Clients_staticchecks.cpp  Quests_staticchecks.cpp
source/D2Gfx/: CMakeLists.txt
source/D2Gfx/definitions/: D2Gfx.1.10f.def
source/D2Gfx/include/: CmnSubtile.h  D2Gfx.h  DisplayType.h  DrawMode.h  Scale.h  Texture.h  Tile.h  Window.h
source/D2Gfx/src/: CmnSubtile.cpp  D2Gfx.cpp  DllMain.cpp  Scale.cpp  Texture.cpp  Tile.cpp  Window.cpp
source/D2Hell/: CMakeLists.txt
source/D2Hell/include/: Archive.h  CRC.h  Fault.h  File.h
source/D2Hell/src/: Archive.cpp  CRC.cpp  Fault.cpp  File.cpp  Window.cpp
source/D2Lang/: CMakeLists.txt
source/D2Lang/definitions/: D2Lang.1.10f.def
source/D2Lang/include/: D2Crc16.h  D2Lang.h  D2StrGroup.h  D2StrTable.h  D2Unicode.h
source/D2Lang/src/: D2Crc16.cpp  D2LangStubs.cpp  D2StrGroup.cpp  D2StrTable.cpp  DllMain.cpp
source/D2Lang/tests/: CMakeLists.txt  D2LangTests.cpp
source/D2MCPClient/: CMakeLists.txt
source/D2MCPClient/definitions/: D2MCPClient.1.10f.def
source/D2MCPClient/include/: D2MCPClient.h
source/D2MCPClient/src/: D2MCPClient.cpp  DllMain.cpp
source/D2Net/: CMakeLists.txt
source/D2Net/definitions/: D2Net.1.10f.def
source/D2Net/include/: Client.h  D2Net.h  Packet.h  Server.h
source/D2Net/src/: Client.cpp  D2Net.cpp  DllMain.cpp  Server.cpp
source/D2Sound/: CMakeLists.txt
source/D2Sound/definitions/: D2Sound.1.10f.def
source/D2Sound/include/: D2Sound.h
source/D2Sound/src/: D2Sound.cpp  DllMain.cpp
source/D2Win/: CMakeLists.txt
source/D2Win/definitions/: D2Win.1.10f.def
source/D2Win/include/: D2WRegister.h  D2WinAccountList.h  D2WinAnimImage.h  D2WinArchive.h  D2WinButton.h  D2WinComp.h  D2WinControlHeader.h  D2WinEditBox.h  D2WinFont.h  D2WinImage.h  D2WinList.h  D2WinMain.h  D2WinPalette.h  D2WinPopUp.h  D2WinProgressBar.h  D2WinScrollBar.h  D2WinSmack.h  D2WinTextBox.h  D2WinTimer.h  Font.h
source/D2Win/src/: D2Comp.cpp  D2WRegister.cpp  D2WinAccountList.cpp  D2WinAnimImage.cpp  D2WinArchive.cpp  D2WinButton.cpp  D2WinEditBox.cpp  D2WinFont.cpp  D2WinImage.cpp  D2WinList.cpp  D2WinMain.cpp  D2WinPalette.cpp  D2WinPopUp.cpp  D2WinProgressBar.cpp  D2WinScrollBar.cpp  D2WinSmack.cpp  D2WinTextBox.cpp  D2WinTimer.cpp  DllMain.cpp  JpegLibraryWrapper.cpp  JpegLibraryWrapper.h
source/Fog/: CMakeLists.txt
source/Fog/definitions/: Fog.1.10f.def
source/Fog/include/: Calc.h  D2BitManip.h  Fog.h  Safesock.h
source/Fog/src/: Calc.cpp  D2BitManip.cpp  DllMain.cpp  Fog.cpp  SafeSock.cpp
source/Fog/statictests/: Fog_staticchecks.cpp
source/Game/: CMakeLists.txt
source/Game/include/: Main.h
source/Game/resources/: Game.1.10f.rc  Game.rc
source/Game/src/: Main.cpp
source/Game/statictests/: Game_staticchecks.cpp
source/Storm/: CMakeLists.txt
source/Storm/definitions/: Storm.1.10f.def
source/Storm/include/: Storm.h  StormHandles.h
source/Storm/src/: DllMain.cpp  Storm.cpp
(+431 files in other folders)
