add_subdirectory(D2CommonDefinitions)
add_subdirectory(Storm)
add_subdirectory(Fog)
add_subdirectory(D2Hell)
add_subdirectory(D2CMP)
add_subdirectory(D2Lang)
add_subdirectory(D2Net)
add_subdirectory(D2Common)
add_subdirectory(D2Game)
add_subdirectory(D2Gfx)
add_subdirectory(D2Sound)
add_subdirectory(D2Debugger)

